--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -398,10 +398,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ask from your wife.\n",
+      "Is she allow you to go stadium? [Y/N]y\n",
+      "do you have tickets? [Y/N]n\n",
+      "enter your age:10\n",
+      "\n",
+      " get loss from here...\n",
+      " go to home and watch on tv\n"
+     ]
+    }
+   ],
+   "source": [
+    "permission = input('ask from your wife.\\nIs she allow you to go stadium? [Y/N]').upper()\n",
+    "tickets = input('do you have tickets? [Y/N]').upper()\n",
+    "age = int(input('enter your age:'))\n",
+    "if age >=18 and permission == \"Y\" and tickets == \"Y\":\n",
+    "    print('\\n you are allow for the match')\n",
+    "else:\n",
+    "    print('\\n get loss from here...\\n go to home and watch on tv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your age 11\n",
+      "You are not eligible to cast vote\n",
+      "you will be allowed after 7years\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input('enter your age '))\n",
+    "remainingAge=18-age\n",
+    "if age >= 18:\n",
+    "    cnic = input('Do you have cnic? [Y/N]').upper()\n",
+    "    vlistname = input('Do you have your name in the voters list? [Y/N]').upper()\n",
+    "    city = input('enter your city name').title()\n",
+    "if (cnic ==\"Y\" and vlistname ==\"Y\") or city!='Lahore':\n",
+    "    print('you are allowed to cast vote')\n",
+    "else:\n",
+    "    print('You are not eligible to cast vote')\n",
+    "    print(\"you will be allowed after \"+ str(remainingAge)+\"years\")\n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# comment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print('hello world') # for comments, another option is three times ''' '''\n",
+    "\n",
+    "# print('hello world')\n",
+    "# print('hello world')\n",
+    "# print('hello world')\n",
+    "# print('hello world')\n",
+    "# print('hello world')\n",
+    "# print('hello world')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'peshawar'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "friends.index('nouman') # provide index of the person in the array\n",
+    "\n",
+    "\"ali\" in friends # check whether ali is in the list or not"
+   ]
   }
  ],
  "metadata": {
