--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -512,14 +512,451 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'friends' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6681fcf22648>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfriends\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'nouman'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# provide index of the person in the array\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;34m\"ali\"\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfriends\u001b[0m \u001b[1;31m# check whether ali is in the list or not\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'friends' is not defined"
+     ]
+    }
+   ],
    "source": [
     "friends.index('nouman') # provide index of the person in the array\n",
     "\n",
     "\"ali\" in friends # check whether ali is in the list or not"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'quetta'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList[2]\n",
+    "myList[-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quetta\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList[2]\n",
+    "print(myList[-3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['khi', 'lhr', 'peshawar', 'hyderabad', 'multan', 'islamabad']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList[3]='hyderabad'\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['khi', 'lhr', 'peshawar', 'quetta', 'hyderabad', 'islamabad']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList[-2]='hyderabad'\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['khi', 'lhr', 'peshawar', 'quetta', 'multan', 'islamabad', 'hyderabad']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList.append('hyderabad')\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "append() takes exactly one argument (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-66fe9fa85163>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmyList\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'khi'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'lhr'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'peshawar'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'quetta'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'multan'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'islamabad'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmyList\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'hyderabad'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'muree'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: append() takes exactly one argument (2 given)"
+     ]
+    }
+   ],
+   "source": [
+    "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
+    "myList.append('hyderabad','muree')\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myList.index('lhr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lhr'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"lhr\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"lhr\"in myList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['car', 'motorbikes', 'trucks', 'aeroplane']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[]\n",
+    "list.append('car')\n",
+    "list.append('motorbikes')\n",
+    "list.append('trucks')\n",
+    "list.append('aeroplane')\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hamza', 'ali', 'saad', 'hayan', 'hafsah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['hamza','ali','saad','hayan','hafsah']\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hamza', 'ali', 'saad', 'hussain', 'hayan', 'hafsah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['hamza','ali','saad','hayan','hafsah']\n",
+    "list.insert(3,'hussain')\n",
+    "print(list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hamza', 'ali', 'saad', 'hussain', 'hayan', 'hafsah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['hamza','ali','saad','hayan','hafsah']\n",
+    "list.insert(3,'hussain')\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hamza', 'ali', 'hayan', 'saad', 'hafsah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['hamza','ali','saad','hayan','saad','hafsah']\n",
+    "list.remove('saad')\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "['hamza', 'ali', 'saad', 'hafsah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['hamza','ali','saad','hayan','hafsah']\n",
+    "print(list.index('hayan'))\n",
+    "del list[3]\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "have you completed your all task? [Y/N]y\n",
+      "Task1\n",
+      "['Task5', 'Task4', 'Task3', 'Task2']\n",
+      "Task1\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['Task5', 'Task4', 'Task3', 'Task2', 'Task1']\n",
+    "task_done=[]\n",
+    "user=input('have you completed your all task? [Y/N]').upper()\n",
+    "if user=='Y':\n",
+    "    task_done = list.pop()\n",
+    "    print(task_done)\n",
+    "    print(list)\n",
+    "    \n",
+    "else:\n",
+    "    print('plz finish the task')\n",
+    "\n",
+    "# if user=='Y':\n",
+    "#     task2=input('have you completed your task2? [Y/N]').upper() \n",
+    "#     if task2=='Y'\n",
+    "#     task_done.append('Task2')\n",
+    "#     list.pop()\n",
+    "#     print('please attempt Task3')\n",
+    "# else:\n",
+    "#     print('plz finish the task')\n",
+    "    \n",
+    "# if user=='Y':\n",
+    "#     task3=input('have you completed your task3? [Y/N]').upper() \n",
+    "#     if task3=='Y'\n",
+    "#     task_done.append('Task3')\n",
+    "#     list.pop()\n",
+    "#     print('please attempt Task4')\n",
+    "# else:\n",
+    "#     print('plz finish the task')   \n",
+    "    \n",
+    "# if user=='Y':\n",
+    "#     task4=input('have you completed your task4? [Y/N]').upper() \n",
+    "#     if task4=='Y'\n",
+    "#     task_done.append('Task4')\n",
+    "#     list.pop()\n",
+    "#     print('please attempt Task5')\n",
+    "# else:\n",
+    "#     print('plz finish the task')  \n",
+    "    \n",
+    "# if user=='Y':\n",
+    "#     task5=input('have you completed your task5? [Y/N]').upper() \n",
+    "#     if task5=='Y'\n",
+    "#     task_done.append('Task5')\n",
+    "#     list.pop()\n",
+    "#     print('congrats')\n",
+    "# else:\n",
+    "#     print('plz finish the task')    \n",
+    "    \n",
+    "print(task_done)    \n",
+    "     \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "todolist=['call sara', 'play','take lunch','goto shopping']\n",
+    "\n",
+    "complete_task=[]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your task:play\n",
+      "['call sara', 'take lunch', 'goto shopping']\n",
+      "['play']\n"
+     ]
+    }
+   ],
+   "source": [
+    "todolist=['call sara', 'play','take lunch','goto shopping']\n",
+    "\n",
+    "complete_task=[]\n",
+    "\n",
+    "task =input(\"Enter your task:\")\n",
+    "if task in todolist:\n",
+    "    index=todolist.index(task)\n",
+    "    complete_task.append(todolist.pop(index))\n",
+    "    print(todolist)\n",
+    "    print(complete_task)\n",
+    "else:\n",
+    "    print(\"This taks is not in list\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
