--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -1614,6 +1614,381 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10apr19\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities=('lahore','karachi','islamabad','hyderabad','quetta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('lahore', 'karachi', 'islamabad', 'hyderabad', 'quetta')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1[0]: physics\n",
+      "tup2[1:5]: (2, 3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup1 = ('physics','chem',1997,1998)\n",
+    "tup2 = (1,2,3,4,5,6,7)\n",
+    "print(\"tup1[0]:\", tup1[0])\n",
+    "print(\"tup2[1:5]:\", tup2[1:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 34.56, 'abc', 'xyz')\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup1 = (12,34.56)\n",
+    "tup2 = ('abc', 'xyz')\n",
+    "tup3 = tup1 + tup2\n",
+    "print (tup3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('physics', 'chemistry', 1997, 2000)\n",
+      "After deleting tup :\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-46825b26b958>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mtup\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'After deleting tup :'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'tup' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tup = ('physics','chemistry', 1997,2000)\n",
+    "print(tup)\n",
+    "del tup\n",
+    "print ('After deleting tup :')\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-05a920bd126a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mthistuple\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'apple'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'banana'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'cherry'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mthistuple\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'blackcurrant'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthistuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "thistuple = ('apple','banana','cherry')\n",
+    "thistuple[1]='blackcurrant'\n",
+    "print(thistuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "thistuple = ('apple','banana','cherry')\n",
+    "for x in thistuple:\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thistuple = ('apple','banana','cherry')\n",
+    "if \"blackBerry\" in thistuple:\n",
+    "    print(\"yes,'apple' is in the fruits tuple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Blackberry in your tupple\n"
+     ]
+    }
+   ],
+   "source": [
+    "thistuple = ('apple','banana','cherry')\n",
+    "if \"blackBerry\" in thistuple:\n",
+    "    print(\"yes,'apple' is in the fruits tuple\")\n",
+    "else:\n",
+    "    print('No Blackberry in your tupple')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "thistuple=('apple', 'banana', 'cherry')\n",
+    "print(len(thistuple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DICTIONARIES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'key':'value'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0 = {'color': 'green', 'points': 5}\n",
+    "print(alien_0['color'])\n",
+    "print(alien_0['points'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0 = {'color': 'green', 'points': '5'}\n",
+    "print(alien_0['color'])\n",
+    "print(alien_0['points'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you just earned5points!\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0 = {'color':'green','points':5}\n",
+    "new_points = alien_0['points']\n",
+    "print('you just earned' + str(new_points)+\"points!\")\n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'green', 'points': 5}\n",
+      "{'color': 'green', 'points': 5, 'x_position': 0, 'y_position': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0 = {'color':'green','points':5}\n",
+    "print(alien_0)\n",
+    "alien_0['x_position'] = 0\n",
+    "alien_0['y_position'] = 25\n",
+    "print(alien_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foods={}\n",
+    "foods['karachi']=['favourite','peshawari','balochi']\n",
+    "foods['sheep']='Boti Kabab'\n",
+    "foods['Khawsa']= 'yummy'\n",
+    "foods['BBQ']='malai boti'\n",
+    "foods['shake']='chocolate'\n",
+    "foods['icecream']= {\"ice\":454,'ice2':555,'ice3':[44,66,88]}\n",
+    "foods['icecream']['ice3'][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shane Robert Watson is a australian international cricketer,\n",
+      "\n",
+      " We all know that Imam ul Haq is a PARCHI.\n"
+     ]
+    }
+   ],
+   "source": [
+    "players = {'watson':'australian international cricketer'}\n",
+    "print('Shane Robert Watson is a '+ players[\"watson\"]+',')\n",
+    "players = {'imam ul haq':'parchi'}\n",
+    "print(\"\\n We all know that Imam ul Haq is a \"+players[\"imam ul haq\"].upper()+\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "karachi is:kings\n",
+      "PSL4 zalmi :won2\n"
+     ]
+    }
+   ],
+   "source": [
+    "psl ={'karachi':'kings','multan':'sultan','zalmi':'won'}\n",
+    "print('karachi is:' + str(psl['karachi']))\n",
+    "if psl['zalmi']=='loser':\n",
+    "    x_increment = 1\n",
+    "elif psl['zalmi']=='won':\n",
+    "    x_increment = 2\n",
+    "else:\n",
+    "    x_increment = 3\n",
+    "psl['zalmi']=psl['zalmi']+str(x_increment)\n",
+    "print(\"PSL4 zalmi :\" + str(psl[\"zalmi\"]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
