--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -1989,6 +1989,512 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15apr19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 10\n",
+      "b 20\n",
+      "c 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1={'a':10, 'b':20, 'c':30}\n",
+    "for key1, value1 in dict1.items():\n",
+    "    print(key1,value1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key3 in dict1.keys():\n",
+    "    print(key3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value3 in dict1.values():\n",
+    "    print(value3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ali\n",
+      "Aamir\n",
+      "12\n",
+      "Karachi\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2={'firstname':'ali', 'last name':'aamir', 'age':12, 'city':'karachi'}\n",
+    "print(dict2['firstname'].title())\n",
+    "print(dict2['last name'].title())\n",
+    "print(dict2['age'])\n",
+    "print(dict2['city'].title())''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His first name is Ali\n",
+      "His last name is Aamir\n",
+      "His age is 12\n",
+      "Karachi\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2={'firstname':'ali', 'last name':'aamir', 'age':12, 'city':'karachi'}\n",
+    "print(\"His first name is \"+ dict2['firstname'].title())\n",
+    "print(\"His last name is \"+dict2['last name'].title())\n",
+    "print(\"His age is \"+ str(dict2['age']))\n",
+    "print(dict2['city'].title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His First Name Is Ali\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2={'firstname':'ali', 'last name':'aamir', 'age':12, 'city':'karachi'}\n",
+    "print(\"His first name is {}\".format(dict2['firstname']).title())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His First Name Is Ali\n",
+      "His Last Name Is Aamir\n",
+      "His Age Is 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2={'firstname':'ali', 'last name':'aamir', 'age':12, 'city':'karachi'}\n",
+    "print(\"His first name is {}\".format(dict2['firstname']).title())\n",
+    "print(\"His last name is {}\".format(dict2['last name']).title())\n",
+    "print(\"His age is {}\".format(dict2['age']).title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# print through format command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict2={'firstname':'ali', 'last name':'aamir', 'age':12, 'city':'karachi'}\n",
+    "print(\"His first name is {}\".format(dict2['firstname']).title())\n",
+    "print(\"His last name is {}\".format(dict2['last name']).title())\n",
+    "print(\"His age is {}\".format(dict2['age']).title())\n",
+    "print(\"His city is {}\".format(dict2['city']).title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Key:Teacher\n",
+      "Value:Sir Nasir\n",
+      "\n",
+      "Key:Teacher_Assistant\n",
+      "Value:Shahzad\n",
+      "\n",
+      "Key:Student\n",
+      "Value:Abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_0 ={'Teacher': 'Sir Nasir', 'Teacher_Assistant':'Shahzad','Student':'Abc'}\n",
+    "for key, value in user_0.items():\n",
+    "    print(\"\\nKey:\" + key)\n",
+    "    print(\"Value:\"+ value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My first Name is Shahzad and my last name is Ahsan\n",
+      "My first Name is Sara Ali and my last name is Khan\n",
+      "My first Name is Komal and my last name is Aftab\n",
+      "My first Name is Hassan and my last name is Ali\n"
+     ]
+    }
+   ],
+   "source": [
+    "names={'shahzad':'ahsan', 'sara Ali':'khan', 'Komal':'aftab','hassan':'Ali'}\n",
+    "for first_name, last_name in names.items():\n",
+    "    print('My first Name is '+first_name.title() + ' and my last name is '+last_name.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# looping through all the keys in a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dict:mobile\n",
+      "Dict:batsman\n",
+      "Dict:bike\n",
+      "Dict:car\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = {'mobile':'apple', 'batsman':'Ab', 'bike':'Heavy', 'car':'audi'}\n",
+    "for word in words.keys():\n",
+    "    print('Dict:' + word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dict:apple\n",
+      "Dict:Ab\n",
+      "Dict:Heavy\n",
+      "Dict:audi\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = {'mobile':'apple', 'batsman':'Ab', 'bike':'Heavy', 'car':'audi'}\n",
+    "for word in words.values():\n",
+    "    print('Dict:' + word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please write your last name also...\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien1 ={'name':'Anas', 'color':'green', 'height':'5.7', 'weight':'67'}\n",
+    "if 'last_name' not in alien1.values():\n",
+    "    print('Please write your last name also...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alien1 ={'name':'last_name', 'color':'green', 'height':'5.7', 'weight':'67'}\n",
+    "if 'last_name' not in alien1.values():\n",
+    "    print('Please write your last name also...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ahmed', 'ali', 'shariq', 'zahid']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['ali','ahmed','zahid','shariq']\n",
+    "list.sort()\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# looping through a dictionary's keys in order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-34-385c45219651>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-34-385c45219651>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    name1={'Sheharyar':'Zafar', 'Saif':'Zahid','Zohaib'}\u001b[0m\n\u001b[1;37m                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1={'Sheharyar':'Zafar', 'Saif':'Zahid','Zohaib'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listing=[1,4,5,17,9669,56,4366,89]\n",
+    "ret = sorted(listing,reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9669, 4366, 89, 56, 17, 5, 4, 1]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 5, 17, 9669, 56, 4366, 89]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'green', 'points': 5}\n",
+      "{'color': 'red', 'points': 10}\n",
+      "{'color': 'blue', 'points': 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0={'color':'green', 'points':5}\n",
+    "alien_1={'color':'red', 'points':10}\n",
+    "alien_2={'color':'blue', 'points':15}\n",
+    "aliens=[alien_0,alien_1,alien_2]\n",
+    "for alien in aliens:\n",
+    "    print(alien)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color green\n",
+      "points 5\n",
+      "color red\n",
+      "points 10\n",
+      "color blue\n",
+      "points 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0={'color':'green', 'points':5}\n",
+    "alien_1={'color':'red', 'points':10}\n",
+    "alien_2={'color':'blue', 'points':15}\n",
+    "aliens=[alien_0,alien_1,alien_2]\n",
+    "for alien in aliens:\n",
+    "    for key,value in alien.items():\n",
+    "        print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# nested loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 * 1 = 2\n",
+      "2 * 2 = 4\n",
+      "2 * 3 = 6\n",
+      "2 * 4 = 8\n",
+      "2 * 5 = 10\n",
+      "2 * 6 = 12\n",
+      "2 * 7 = 14\n",
+      "2 * 8 = 16\n",
+      "2 * 9 = 18\n",
+      "2 * 10 = 20\n",
+      "3 * 1 = 3\n",
+      "3 * 2 = 6\n",
+      "3 * 3 = 9\n",
+      "3 * 4 = 12\n",
+      "3 * 5 = 15\n",
+      "3 * 6 = 18\n",
+      "3 * 7 = 21\n",
+      "3 * 8 = 24\n",
+      "3 * 9 = 27\n",
+      "3 * 10 = 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=[1,2,3,4,5,6,7,8,9,10]\n",
+    "for table in [2,3]:\n",
+    "    for num in numbers:\n",
+    "        print(f\"{table} * {num} = {table*num}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
