--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -2495,6 +2495,374 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 22-Apr-19\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A dictionary in a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Username:sheikh\n",
+      "\tFull name:Shahzad Ahsan\n",
+      "\tLocation:Bahadurabad\n",
+      "\n",
+      "Username:sir\n",
+      "\tFull name:Nasir Hussain\n",
+      "\tLocation:Gulsahn\n"
+     ]
+    }
+   ],
+   "source": [
+    "users = {'sheikh':{'first':'shahzad','last':'ahsan','location':'bahadurabad',},'sir':{'first':'nasir','last':'hussain','location':'gulsahn',}}\n",
+    "for username, user_info in users.items():\n",
+    "    print(\"\\nUsername:\" +username)\n",
+    "    full_name = user_info['first']+\" \"+user_info['last']\n",
+    "    location=user_info['location']\n",
+    "    print(\"\\tFull name:\"+full_name.title())\n",
+    "    print(\"\\tLocation:\"+location.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 hello\n",
+      "2 hello\n",
+      "3 hello\n",
+      "4 hello\n",
+      "5 hello\n",
+      "6 hello\n",
+      "7 hello\n",
+      "8 hello\n",
+      "9 hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "while a<10:\n",
+    "    print(a,\"hello\")\n",
+    "    a +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 hello\n",
+      "9 hello\n",
+      "8 hello\n",
+      "7 hello\n",
+      "6 hello\n",
+      "5 hello\n",
+      "4 hello\n",
+      "3 hello\n",
+      "2 hello\n",
+      "1 hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "while a>0:\n",
+    "    print(a,\"hello\")\n",
+    "    a -=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 hello\n",
+      "2 hello\n",
+      "3 hello\n",
+      "4 hello\n",
+      "5 hello\n",
+      "6 hello\n",
+      "7 hello\n",
+      "8 hello\n",
+      "9 hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(1,10):\n",
+    "    print(a,\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "while a<20:\n",
+    "    print(a)\n",
+    "    a +=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "while a<21:\n",
+    "    print(a)\n",
+    "    a +=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 odd\n",
+      "2 even\n",
+      "3 odd\n",
+      "4 even\n",
+      "5 odd\n",
+      "6 even\n",
+      "7 odd\n",
+      "8 even\n",
+      "9 odd\n",
+      "10 even\n",
+      "11 odd\n",
+      "12 even\n",
+      "13 odd\n",
+      "14 even\n",
+      "15 odd\n",
+      "16 even\n",
+      "17 odd\n",
+      "18 even\n",
+      "19 odd\n",
+      "20 even\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "while a<21:\n",
+    "    if a%2==0:\n",
+    "        print(a,\"even\")\n",
+    "    else:\n",
+    "        print(a,\"odd\")\n",
+    "    a +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :4\n",
+      "The square of the number is  16\n",
+      "enter number :45\n",
+      "The square of the number is  2025\n",
+      "enter number :20\n",
+      "The square of the number is  400\n",
+      "enter number :485\n",
+      "The square of the number is  235225\n",
+      "enter number :1\n",
+      "The square of the number is  1\n",
+      "enter number :q\n",
+      "you are out now\n"
+     ]
+    }
+   ],
+   "source": [
+    "condition = True\n",
+    "while condition:\n",
+    "    num = input(\"enter number :\")\n",
+    "    if num==\"q\":\n",
+    "        print('you are out now')\n",
+    "        condition = False\n",
+    "    else:\n",
+    "        print(\"The square of the number is \", int(num)**2)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :1\n"
+     ]
+    }
+   ],
+   "source": [
+    " num1 = int(input(\"enter number :\"))\n",
+    "  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :12\n",
+      "enter another number :12\n"
+     ]
+    }
+   ],
+   "source": [
+    " num1 = int(input(\"enter number :\"))\n",
+    "num2 = int(input(\"enter another number :\"))\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = int(input(\"enter number :\"))\n",
+    "num2 = int(input(\"enter another number :\"))\n",
+    "\n",
+    "print(\" Press 1 for addition\\n\", \"Press 2 for subtraction\\n\", \"Press 3 for multiplication\\n\", \"Press 4 for division\\n\", \"Press 5 for quit\")\n",
+    "\n",
+    "num3 = int(input('enter number from 1 to 5'))\n",
+    "\n",
+    "if num3==1:\n",
+    "    print(num1+num2)\n",
+    "elif num3==2:\n",
+    "    print(num1-num2)\n",
+    "elif num3==3:\n",
+    "    print(num1*num2)\n",
+    "elif num3==4:\n",
+    "    print(num1/num2)\n",
+    "elif num3==5:\n",
+    "    print('quit')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = int(input(\"enter number :\"))\n",
+    "num2 = int(input(\"enter another number :\"))\n",
+    "\n",
+    "print(\" Press 1 for addition\\n\", \"Press 2 for subtraction\\n\", \"Press 3 for multiplication\\n\", \"Press 4 for division\\n\", \"Press 5 for quit\")\n",
+    "\n",
+    "num3 = int(input('enter number from 1 to 5'))\n",
+    "\n",
+    "if num3==1:\n",
+    "    print(num1+num2)\n",
+    "elif num3==2:\n",
+    "    print(num1-num2)\n",
+    "elif num3==3:\n",
+    "    print(num1*num2)\n",
+    "elif num3==4:\n",
+    "    print(num1/num2)\n",
+    "elif num3==5:\n",
+    "    print('quit')   \n",
+    "\n",
+    "    condition = True\n",
+    "\n",
+    "while condition:\n",
+    "    num4 = input('do you want to cont? press Y/N').upper()\n",
+    "if num4==\"Y\":\n",
+    "        condition = False\n",
+    "else:\n",
+    "        print('thanks')\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
