--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -2729,28 +2729,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter number :4\n",
-      "The square of the number is  16\n",
-      "enter number :45\n",
-      "The square of the number is  2025\n",
-      "enter number :20\n",
-      "The square of the number is  400\n",
-      "enter number :485\n",
-      "The square of the number is  235225\n",
-      "enter number :1\n",
-      "The square of the number is  1\n",
-      "enter number :q\n",
-      "you are out now\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "condition = True\n",
     "while condition:\n",
@@ -2806,6 +2787,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter number :44\n",
+      "enter another number :44\n",
+      " Press 1 for addition\n",
+      " Press 2 for subtraction\n",
+      " Press 3 for multiplication\n",
+      " Press 4 for division\n",
+      " Press 5 for quit\n",
+      "enter number from 1 to 55\n",
+      "quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"enter number :\"))\n",
+    "num2 = int(input(\"enter another number :\"))\n",
+    "\n",
+    "print(\" Press 1 for addition\\n\", \"Press 2 for subtraction\\n\", \"Press 3 for multiplication\\n\", \"Press 4 for division\\n\", \"Press 5 for quit\")\n",
+    "\n",
+    "num3 = int(input('enter number from 1 to 5'))\n",
+    "\n",
+    "if num3==1:\n",
+    "    print(num1+num2)\n",
+    "elif num3==2:\n",
+    "    print(num1-num2)\n",
+    "elif num3==3:\n",
+    "    print(num1*num2)\n",
+    "elif num3==4:\n",
+    "    print(num1/num2)\n",
+    "elif num3==5:\n",
+    "    print('quit')   \n",
+    "\n",
+    "condition = True\n",
+    "while condition:\n",
+    "    num4 = input('do you want to cont? press Y/N').upper()\n",
+    "if num4==\"Y\":\n",
+    "        condition = False\n",
+    "else:\n",
+    "        print('thanks')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num1 = int(input(\"enter number :\"))\n",
@@ -2831,35 +2862,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter your flavor=d\n",
+      "your ordered flavor is = d\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 = int(input(\"enter number :\"))\n",
-    "num2 = int(input(\"enter another number :\"))\n",
-    "\n",
-    "print(\" Press 1 for addition\\n\", \"Press 2 for subtraction\\n\", \"Press 3 for multiplication\\n\", \"Press 4 for division\\n\", \"Press 5 for quit\")\n",
-    "\n",
-    "num3 = int(input('enter number from 1 to 5'))\n",
-    "\n",
-    "if num3==1:\n",
-    "    print(num1+num2)\n",
-    "elif num3==2:\n",
-    "    print(num1-num2)\n",
-    "elif num3==3:\n",
-    "    print(num1*num2)\n",
-    "elif num3==4:\n",
-    "    print(num1/num2)\n",
-    "elif num3==5:\n",
-    "    print('quit')   \n",
-    "\n",
-    "    condition = True\n",
-    "\n",
-    "while condition:\n",
-    "    num4 = input('do you want to cont? press Y/N').upper()\n",
-    "if num4==\"Y\":\n",
-    "        condition = False\n",
-    "else:\n",
-    "        print('thanks')\n",
-    "        "
+    "flag = True\n",
+    "topping = ''\n",
+    "topp=[]\n",
+    "while flag==True:\n",
+    "    pizza = input('please enter your flavor=')\n",
+    "    if pizza != \"q\":\n",
+    "        print('your ordered flavor is = '+ pizza)\n",
+    "    else:\n",
+    "        break\n",
+    "    user_input = input('Please enter the size , or press \"q\" to terminate the program: ')\n",
+    "    if user_input != \"q\":\n",
+    "        print('your ordered size is ='+user_input)\n",
+    "    else:\n",
+    "        break\n",
+    "    while topping!=\"q\":\n",
+    "        topping= input('enter your topping = ')\n",
+    "        topp.append(topping)\n",
+    "    else:\n",
+    "        break\n",
+    "    break\n",
+    "for top in topping:\n",
+    "    print(top)\n",
+    "        \n",
+    "    \n"
    ]
   },
   {
