--- a/classs5.ipynb
+++ b/classs5.ipynb
@@ -459,9 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quetta\n"
+     ]
+    }
+   ],
    "source": [
     "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
     "myList[2]\n",
@@ -492,20 +500,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['khi', 'lhr', 'peshawar', 'quetta', 'multan', 'islamabad', 'hyderabad']\n"
+     ]
+    }
+   ],
    "source": [
     "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
     "myList.append('hyderabad')\n",
-    "print(myList)"
+    "print(myList)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "append() takes exactly one argument (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-66fe9fa85163>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmyList\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'khi'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'lhr'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'peshawar'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'quetta'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'multan'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'islamabad'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmyList\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'hyderabad'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'muree'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: append() takes exactly one argument (2 given)"
+     ]
+    }
+   ],
    "source": [
     "myList=['khi','lhr','peshawar','quetta','multan','islamabad']\n",
     "myList.append('hyderabad','muree')\n",
@@ -565,9 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hamza', 'ali', 'saad', 'hussain', 'hayan', 'hafsah']\n"
+     ]
+    }
+   ],
    "source": [
     "list=['hamza','ali','saad','hayan','hafsah']\n",
     "list.insert(3,'hussain')\n",
@@ -729,9 +765,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-5a1e195d8f4f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#list1[start:end]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlist2\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mlist2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#list1[start:end]\n",
     "list2 =list1[3:5]\n",
@@ -740,9 +788,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-960c0463ecd9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#list1[start:end]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlist2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#list1[start:end]\n",
     "list2 = list1[3:5]\n",
@@ -2860,15 +2920,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter your flavor=d\n",
-      "your ordered flavor is = d\n"
+      "please enter your flavor=pp\n",
+      "your ordered flavor is = pp\n",
+      "Please enter the size , or press \"q\" to terminate the program: 34\n",
+      "your ordered size is =34\n",
+      "enter your topping = w\n",
+      "enter your topping = w\n",
+      "enter your topping = w\n",
+      "enter your topping = t\n",
+      "enter your topping = q\n",
+      "q\n"
      ]
     }
    ],
@@ -2897,6 +2965,512 @@
     "    print(top)\n",
     "        \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1-may-19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i==5:\n",
+    "        break\n",
+    "    else:\n",
+    "        print(i)\n",
+    "else:\n",
+    "        print(\"Here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=(i for i in range(3))\n",
+    "for i in x:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my,name,is,x,"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'my name is x'\n",
+    "for i in string.split():\n",
+    "    print(i,end=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my*name*is*x*"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'my name is x'\n",
+    "for i in string.split():\n",
+    "    print(i,end=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my\n",
+      "name\n",
+      "is\n",
+      "x\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'my-name-is-x'\n",
+    "for i in string.split(\"-\"):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[0,1,2,3]\n",
+    "i=-2\n",
+    "if i not in a:\n",
+    "    print(i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n",
+      "52\n",
+      "54\n",
+      "56\n",
+      "58\n",
+      "60\n",
+      "62\n",
+      "64\n",
+      "66\n",
+      "68\n",
+      "70\n",
+      "72\n",
+      "74\n",
+      "76\n",
+      "78\n",
+      "80\n",
+      "82\n",
+      "84\n",
+      "86\n",
+      "88\n",
+      "90\n",
+      "92\n",
+      "94\n",
+      "96\n",
+      "98\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,101):\n",
+    "    if int(i*0.5)==i*0.5:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['good']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=['good','oh!','excellent!','450#']\n",
+    "[n for n in l if n.isalpha() or n.isdigit()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 1), (4, 2), (4, 1), (5, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=[3,4]\n",
+    "s2=[1,2]\n",
+    "s3=list()\n",
+    "i=0\n",
+    "j=0\n",
+    "for i in s1:\n",
+    "    for j in s2:\n",
+    "        s3.append((i,j))\n",
+    "        i+=1\n",
+    "        j+=1\n",
+    "print(s3)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(6, 11), (7, 15), (7, 11), (8, 15)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=[6,7]\n",
+    "s2=[11,15]\n",
+    "s3=list()\n",
+    "i=0\n",
+    "j=0\n",
+    "for i in s1:\n",
+    "    for j in s2:\n",
+    "        s3.append((i,j))\n",
+    "        i+=1\n",
+    "        j+=1\n",
+    "print(s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(6, 11), (7, 15), (8, 17), (7, 11), (8, 15), (9, 17)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=[6,7]\n",
+    "s2=[11,15,17]\n",
+    "s3=list()\n",
+    "i=0\n",
+    "j=0\n",
+    "for i in s1:\n",
+    "    for j in s2:\n",
+    "        s3.append((i,j))\n",
+    "        i+=1\n",
+    "        j+=1\n",
+    "print(s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={}\n",
+    "a[2]=1\n",
+    "a[1]=[2,3,4]\n",
+    "print(a[1][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 A 2 B 3 C 4 D "
+     ]
+    }
+   ],
+   "source": [
+    "a ={1:\"A\",2:\"B\",3:\"C\", 4:\"D\"}\n",
+    "for i, j in a.items():\n",
+    "    print(i,j, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'D', 2: 'B', 3: 'C', 5: 'E'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a ={1:\"A\",2:\"B\",3:\"C\"}\n",
+    "b ={1:'D', 5:\"E\"}\n",
+    "a.update(b)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a ={1:\"A\",2:\"B\",3:\"C\"}\n",
+    "a.clear()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 5, 2: 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={1:5,2:3,3:4}\n",
+    "a.pop(3)\n",
+    "print(a)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 3, 3: 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={1:5,2:3,3:4}\n",
+    "a.pop(1)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "lamb = lambda x:x**3 # lambda = anonymious function\n",
+    "print(lamb(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =[1,2,3,4,5,5,5,6,6,7,8]\n",
+    "c = set(a)\n",
+    "print(c)\n",
+    "\n",
+    "# set removes duplicate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i<5:\n",
+    "    print(i)\n",
+    "    i+=1\n",
+    "    if i==3:\n",
+    "        break\n",
+    "else:\n",
+    "    print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[1,2,3,4]\n",
+    "print(lst[-3:-2])"
    ]
   },
   {
